<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidex.mytools.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/otg_usb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/otg2usb"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_Ethernet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/ethernet"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/ethernet_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/tv_Ethernet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:text="@string/ethernet_permission"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <Switch
                    android:id="@+id/ethernet_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/reboot_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/upgrade"
                android:textSize="18dp" />

            <Button
                android:id="@+id/reboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/reset"
                android:textSize="18dp" />

            <Button
                android:id="@+id/shutdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/shutdown"
                android:textSize="18dp" />

            <Button
                android:id="@+id/getUUID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/getuuid"
                android:textSize="18dp" />

            <Button
                android:id="@+id/setEthernetIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/setEthernetIP"
                android:textSize="18dp" />

            <Button
                android:id="@+id/setWifiIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/setWifiIP"
                android:textSize="18dp" />

            <Button
                android:id="@+id/muteinstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/mute_install"
                android:textSize="18dp" />

            <Button
                android:id="@+id/uninstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/un_install"
                android:textSize="18dp" />

            <Button
                android:id="@+id/finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:gravity="left|center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/finish"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
